# DevEx

./: .gitignore  .mcp.aws.example.json  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  dev.local.env  docker-compose.yml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: README.md
app/backend/: .env.example  pyproject.toml
app/backend/src/devex_app/: agent.py  drafts.py  inventory.py  leaves.py  main.py  settings.py  tofu.py  vcs.py
app/backend/src/devex_app/routes/: _deps.py  blueprint.py  chat.py  existing.py  hierarchy.py  inventory.py  plan.py  promote.py
app/backend/tests/: conftest.py  test_adopt_write.py  test_agent_prompt.py  test_blueprint_flat_removed.py  test_draft_list.py  test_draft_overlay.py  test_draft_routes.py  test_drafts_store.py  test_existing_resources.py  test_flat_endpoints_removed.py  test_generate_config.py  test_hierarchy.py  test_import_roundtrip.py  test_inventory_classify.py  test_inventory_drafts.py  test_inventory_overlay.py  test_inventory_planned.py  test_inventory_route.py  test_leaves.py  test_owner.py  test_owner_dep.py  test_plan_diff_leaf.py  test_promote.py  test_schemas.py  test_vcs.py
app/frontend/: COMPONENTS.md  DESIGN.md  DESIGN_BRIEF.md  next.config.ts  package-lock.json  package.json
bootstrap/: main.tf  outputs.tf  variables.tf
bootstrap/tests/: plan.tftest.hcl
demo/three-tool-import/: .gitignore  README.md
live/blueprint/: .gitignore  backend.tf  main.tf  variables.tf
live/dev/: backend.aws.hcl.example  backend.local.hcl.example  backend.tf  encryption.tf  main.tf  variables.tf
live/devex-live/: README.md
modules/ec2-instance/: main.tf  outputs.tf  variables.tf
modules/vpc/: main.tf  (+3 more)
policies/: checkov-skip.yaml
research/: Open-Source Unified Platform Architecture for Advanced Infrastructure as Code Management.md  blueprint-state-visualization-design.md  migration-playbook-multi-account.md
(+64 files in other folders)
