[project]
name = "devex-app-backend"
version = "0.1.0"
description = "FastAPI backend for the DevEx Platform UI — chat + plan inspector."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    # Used by the Blueprint canvas to read the resource .tf files back
    # off disk. We could regex-parse our own writes (they're tightly
    # structured), but `python-hcl2` handles hand-edited HCL and HCL
    # produced by the AI agent's Edit/Write tools — which matters
    # because Phase 4's AI integration writes through those tools.
    "python-hcl2>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devex_app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
